--- a/src/component/Skills/Board/Board.module.scss
+++ b/src/component/Skills/Board/Board.module.scss
@@ -43,6 +43,40 @@
     gap: 4px;
     margin: 16px;
 }
+.boardWrite {
+    max-width: 80vw;
+    min-width: 730px;
+    justify-content: center;
+    align-items: center;
+    margin:0 auto;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+.boardWriteButtonWrap {
+    justify-content: center;
+    align-items: center;
+}
+.boardWriteButton {
+    border: none;
+    border-radius: 8px;
+    padding: 8px;
+    margin:0;
+    background: black;
+    color: white;
+    font-size: 1rem;
+    &:hover {
+        background: skyblue;
+        cursor: pointer;
+        transform: translate(-2px);
+    }
+    &[disabled] {
+        background: grey;
+        cursor: revert;
+        transform: revert;
+    }
+}
 
 .boardTable {
     border: 1px #ccc solid;
@@ -57,48 +91,13 @@
     flex-direction: column;
     align-items:flex-start;
 }
-.boardTr {
-    border-bottom:solid 1px #ccc;
+.boardTrMax {
     margin:5px 5px 5px 10px;
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     min-width: 700px;
-    
-    > .boardIdx {
-        display: inline-flex;
-        width: 4vw;
-        min-width: 30px;
-        align-items: center;
-        justify-content: center;
-    }
-    > .boardTitle {
-        display: inline-flex;
-        width: 15vw;
-        min-width: 80px;
-        align-items: center;
-        justify-content:start;
-    }
-    > .boardContent {
-        display: inline-flex;
-        width: 30vw;
-        min-width: 240px;
-        align-items: center;
-        justify-content:start;
-    }
-    .boardUserName {
-        width: 5vw;
-        display: inline;
-        align-items: center;
-        justify-content:end;
-    }
-    > .boardDate {
-        width: 5vw;
-        display: inline;
-        align-items: center;
-        justify-content:end;
-    }
     > button {
         display: inline-block;
         width:9vw;
@@ -111,11 +110,125 @@
         color: white;
         font-size: 1rem;
     }
-    > .boardbuttons {
-        display: inline-flex;
-        width: 19vw;
-        min-width: 180px;
-        align-items: center;
-        justify-content: center;
+}
+.boardTr {
+    margin:5px 5px 5px 10px;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    min-width: 700px;
+    border-bottom:solid 1px #ccc;
+    > button {
+        display: inline-block;
+        width:9vw;
+        min-width: 85px;
+        border: none;
+        border-radius: 8px;
+        padding: 8px;
+        margin:5px;
+        background: black;
+        color: white;
+        font-size: 1rem;
+    }
+}
+
+.boardIdx {
+    display: inline-flex;
+    width: 4vw;
+    min-width: 30px;
+    align-items: center;
+    justify-content: center;
+}
+.boardTitle {
+    display: inline-flex;
+    width: 12vw;
+    min-width: 80px;
+    align-items: center;
+    justify-content:start;
+}
+.boardContent {
+    display: inline-flex;
+    width: 27vw;
+    min-width: 240px;
+    align-items: center;
+    justify-content:start;
+}
+.boardUserName {
+    width: 5vw;
+    display: inline;
+    align-items: center;
+    justify-content:end;
+}
+
+.boardDate {
+    width: 10vw;
+    min-width: 110px;
+    display: inline-flex;
+    align-items: flex-end;
+    justify-content:end;
+}
+
+.boardbuttons {
+    display: inline-flex;
+    width: 19vw;
+    min-width: 180px;
+    align-items: center;
+    justify-content: center;
+}
+
+.titleBox {
+    padding: 1rem 2rem 1rem 2rem;
+    > label {
+        padding: 1rem 1rem 0.3rem 0.3rem;
+        display: block;
+        font-size: 0.8rem;
+        color:rgb(130, 130, 130);
+    }
+    > input {
+        width: 70vw;
+        outline: none;
+        border: 0;
+        border-bottom: 1px solid #ccc;
+        color: #333;
+        font-size: 1rem;
+        padding-left: 0.3rem;
+    }
+}
+
+.contentBox {
+    padding: 1rem 2rem 1rem 2rem;
+    > label {
+        padding: 0rem 1rem 0.3rem 0.3rem;
+        display: block;
+        font-size: 0.8rem;
+        color:rgb(130, 130, 130);
+    }
+    > input {
+        width: 70vw;
+        outline: none;
+        border: 0;
+        border-bottom: 1px solid #ccc;
+        color: #333;
+        font-size: 1rem;
+        padding-left: 0.3rem;
+    }
+}
+
+.infoBox {
+    padding: 1rem 2rem 1rem 2rem;
+    > label {
+        padding: 0rem 1rem 0.3rem 0.3rem;
+        display: block;
+        font-size: 0.8rem;
+        color:rgb(130, 130, 130);
+    }
+    > input {
+        width: 70vw;
+        outline: none;
+        border: 0;
+        color:rgb(130, 130, 130);
+        font-size: 1rem;
+        padding-left: 0.3rem;
     }
 }
