--- a/src/component/Skills/Join/Join.module.scss
+++ b/src/component/Skills/Join/Join.module.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   border: 1px solid #ccc;
   border-radius: 8px;
-
+  margin-top: 10px;
   padding: 20px;
   box-sizing: border-box;
 }
