update UI 및 기능-열공하자

--- a/src/component/Nav/Nav.module.scss
+++ b/src/component/Nav/Nav.module.scss
@@ -51,7 +51,7 @@ h1, p {
       cursor: pointer;
       transform: translate(-2px);
   }
-  &[disabled] {
+  &[aria-readonly] {
       background: grey;
       cursor: revert;
       transform: revert;
