--- a/src/component/Skills/Board/Board.module.scss
+++ b/src/component/Skills/Board/Board.module.scss
@@ -109,6 +109,11 @@
         background: black;
         color: white;
         font-size: 1rem;
+        &:hover {
+            background: skyblue;
+            cursor: pointer;
+            transform: translate(-2px);
+        }
     }
 }
 .boardTr {
@@ -130,6 +135,11 @@
         background: black;
         color: white;
         font-size: 1rem;
+        &:hover {
+            background: skyblue;
+            cursor: pointer;
+            transform: translate(-2px);
+        }
     }
 }
 
@@ -145,14 +155,14 @@
     width: 12vw;
     min-width: 80px;
     align-items: center;
-    justify-content:start;
+    justify-content:flex-start;
 }
 .boardContent {
     display: inline-flex;
     width: 27vw;
     min-width: 240px;
     align-items: center;
-    justify-content:start;
+    justify-content:flex-start;
 }
 .boardUserName {
     width: 5vw;
@@ -166,7 +176,7 @@
     min-width: 110px;
     display: inline-flex;
     align-items: flex-end;
-    justify-content:end;
+    justify-content:flex-end;
 }
 
 .boardbuttons {
